integration_tests/codegen_fail/fail/interface/implementers_duplicate_ugly.stderr
error[E0119]: conflicting implementations of trait `<CharacterValue as juniper::GraphQLInterface<__S>>::mark::_::{closure#0}::MutuallyExclusive` for type `ObjA`:
  --> $DIR/implementers_duplicate_ugly.rs:18:1
   |
18 | #[graphql_interface(for = [ObjA, ObjAlias])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `ObjA`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `std::convert::From<ObjA>` for type `CharacterValue`:
  --> $DIR/implementers_duplicate_ugly.rs:18:1
   |
18 | #[graphql_interface(for = [ObjA, ObjAlias])]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `CharacterValue`
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
